Added filename and format checking to export command