@@ -2,18 +2,20 @@ package scm.address.logic.commands;
 
 import static java.util.Objects.requireNonNull;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.function.Predicate;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import static scm.address.model.file.FileFormat.JSON_FILE;
+import static scm.address.model.file.FileFormat.CSV_FILE;
+import static scm.address.model.file.FileFormat.MESSAGE_UNSUPPORTED_FILE_FORMAT;
+import static scm.address.model.file.FileFormat.getFileFormat;
+
+import scm.address.commons.exceptions.IllegalValueException;
 import scm.address.logic.commands.exceptions.CommandException;
 import scm.address.model.AddressBook;
 import scm.address.model.Model;
@@ -28,16 +30,14 @@ import scm.address.storage.JsonAddressBookStorage;
 public class FindAndExportCommand extends Command {
 
     public static final String COMMAND_WORD = "find_and_export";
-    public static final String DEFAULT_FILEPATH = "./data/default_filename.json";
     public static final String MESSAGE_USAGE = "find_and_export: Exports the users filtered by a tag "
             + "and other optional parameters.\n"
-            + "Parameters: TAG [n/NAME] [a/ADDRESS] [f/FILENAME] [v/FILEFORMAT]\n"
-            + "Example: find_and_export cs2103t n/john a/olive street 42 o/output1 v/csv";
+            + "Parameters: TAG [n/NAME] [a/ADDRESS] [f/FILENAME] \n"
+            + "Example: find_and_export cs2103t n/john a/olive street 42 o/output1.json";
     private final String tag;
     private final String name;
     private final String address;
-    private final String filename;
-    private final String fileFormat;
+    private final File file;
 
     /**
      * Constructs a FindAndExportCommand to find and export users' information.
@@ -45,15 +45,13 @@ public class FindAndExportCommand extends Command {
      * @param tag The tag by which users are filtered.
      * @param name The name substring by which users are further filtered. Can be {@code null}.
      * @param address The address substring by which users are further filtered. Can be {@code null}.
-     * @param filename The name of the file to which the filtered users are exported.
-     * @param fileFormat The format of the file to which the filtered users are exported.
+     * @param file The file to which the filtered users are exported.
      */
-    public FindAndExportCommand(String tag, String name, String address, String filename, String fileFormat) {
+    public FindAndExportCommand(String tag, String name, String address, File file) {
         this.tag = tag;
         this.name = name;
         this.address = address;
-        this.filename = filename;
-        this.fileFormat = fileFormat;
+        this.file = file;
     }
 
     public String getTag() {
@@ -68,13 +66,10 @@ public class FindAndExportCommand extends Command {
         return address;
     }
 
-    public String getFilename() {
-        return filename;
+    public File getFile() {
+        return file;
     }
 
-    public String getFileFormat() {
-        return fileFormat;
-    }
 
     @Override
     public CommandResult execute(Model model) throws CommandException {
@@ -88,9 +83,9 @@ public class FindAndExportCommand extends Command {
         }
 
         try {
-            exportData(filteredList, this.filename, this.fileFormat);
-            return new CommandResult(String.format("Export successful to [%s].", this.filename));
-        } catch (IOException e) {
+            exportData(filteredList, this.file);
+            return new CommandResult(String.format("Export successful to [%s].", this.file.getName()));
+        } catch (IOException | IllegalValueException e) {
             throw new CommandException("Error exporting data: " + e.getMessage());
         }
     }
@@ -112,13 +107,14 @@ public class FindAndExportCommand extends Command {
         return predicate;
     }
 
-    private void exportData(List<Person> users, String filename, String fileFormat) throws IOException {
+    private void exportData(List<Person> users, File file) throws IOException, IllegalValueException {
+        String fileFormat = getFileFormat(file);
         switch (fileFormat) {
-        case "json":
-            exportDataAsJson(users, filename);
+        case JSON_FILE:
+            exportDataAsJson(users, file.getName());
             break;
-        case "csv":
-            exportDataAsCsv(users, filename);
+        case CSV_FILE:
+            exportDataAsCsv(users, file);
             break;
         default:
             throw new IOException("Unsupported file format: " + fileFormat);
@@ -137,10 +133,9 @@ public class FindAndExportCommand extends Command {
         jsonAddressBookStorage.saveAddressBook(addressBook);
     }
 
-    private void exportDataAsCsv(List<Person> users, String filename) throws IOException {
-        Path path = Paths.get(filename);
-        if (Files.exists(path) && !Files.isWritable(path)) {
-            throw new IOException("File exists but is not writable: " + path);
+    private void exportDataAsCsv(List<Person> users, File file) throws IOException {
+        if (file.exists() && !file.canWrite()) {
+            throw new IOException("File exists but is not writable: " + file.getAbsolutePath());
         }
         StringBuilder csv = new StringBuilder();
         csv.append("Name,Phone,Email,Address,Tags\n");
@@ -152,6 +147,6 @@ public class FindAndExportCommand extends Command {
             csv.append(user.getTags().stream().map(tag -> tag.tagName).reduce((a, b) -> a + " | " + b).orElse(""));
             csv.append("\n");
         }
-        Files.writeString(path, csv);
+        Files.write(file.toPath(), csv.toString().getBytes());
     }
 }
